# PagProyecto

./: CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  conandata.yml  main.cpp
Camara/: Camara.cpp  Camara.h
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
GUI/: GUI.cpp  GUI.h
Luz/: Luz.cpp  Luz.h  PropiedadesLuz.h
Luz/LuzAplicador/: LuzAplicador.h
Luz/LuzAplicador/LuzAmbienteAplicador/: LuzAmbienteAplicador.cpp  LuzAmbienteAplicador.h
Luz/LuzAplicador/LuzDireccionalAplicador/: LuzDireccionalAplicador.cpp  LuzDireccionalAplicador.h
Luz/LuzAplicador/LuzFocalAplicador/: LuzFocalAplicador.cpp  LuzFocalAplicador.h
Luz/LuzAplicador/LuzPuntualAplicador/: LuzPuntualAplicador.cpp  LuzPuntualAplicador.h
Material/: Material.cpp  Material.h
Modelo/: Modelo.cpp  Modelo.h
Renderer/: Renderer.cpp  Renderer.h
Shader/: Shader.cpp  Shader.h  ShaderPrograms.cpp  ShaderPrograms.h
Shaders/: pag03-fs.glsl  pag03-vs.glsl  pag06-vs.glsl  pag07-fs.glsl  pag07-vs.glsl  pag08-fs.glsl  pag08-vs.glsl
imgui/src/: imgui.cpp
